# Ptilopsis

./: .gitignore  Ptilopsis.sln  Ptilopsis.sln.DotSettings  Ptilopsis.vcxproj  Ptilopsis.vcxproj.filters  README.md  avx_buffer.natvis  meson.build  notes.md  ptilopsis.code-workspace  results.csv  results_scalar.csv  test.py  test_scalar.py  tests.py  visualize.py  visualize_scalar.py
benchmarks/: plot_prefix_sum.py  prefix_sum.cpp  test_shifts.cpp
include/: XGetopt.h  disassembler.h  simd.hpp  threading.hpp  utils.hpp
include/codegen/: avx_buffer.hpp  rv_generator.hpp  rv_generator_avx.hpp  rv_nodetype.hpp  swap_buffer.hpp
src/: XGetopt.cpp  disassembler.cpp  main.cpp
src/codegen/: rv_generator.cpp  rv_generator_avx.cpp
subprojects/: magic_enum.wrap
subprojects/pareas-ast/: README.md  meson.build
subprojects/pareas-ast/include/codegen/: astnode.hpp  datatype.hpp  depthtree.hpp
subprojects/pareas-ast/src/: main.cpp
subprojects/pareas-ast/src/codegen/: astnode.cpp  depthtree.cpp
testfiles/: arith1.in  basic1.ptl  comp0  comp0.S  comp0.par  comp0.ptl  comp1.in  comp1.par  comp1.ptl  comp_all  comp_all.ptl  many_args.in
tex/: bibliography.bib  thesis.tex  titlepage.tex
